- Added images remove/add handlers - Added text onChange handler - Updated z-index for toolbar - Readme fixes - Added examples

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lexical-paste-editor",
   "description": "Editor with limited access rights",
   "private": false,
-  "version": "0.0.4",
+  "version": "0.0.6",
   "author": "Nick Kaidash",
   "license": "MIT",
   "type": "module",
@@ -44,6 +44,7 @@
     "@lexical/selection": "0.14.5",
     "@lexical/table": "^0.14.5",
     "@lexical/utils": "^0.14.5",
+    "@lexical/html": "^0.14.5",
     "lexical": "^0.14.5",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
