--- a/.github/workflows/npm-publish-action.yml
+++ b/.github/workflows/npm-publish-action.yml
@@ -1,22 +1,13 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Npm publish
 
 on:
   release:
     types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm install
-
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -24,8 +15,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20.x'
           registry-url: https://registry.npmjs.org/
+      - run: npm install
       - run: npm run build
       - run: npm publish
         env:
