--- a/.github/workflows/npm-publish-action.yml
+++ b/.github/workflows/npm-publish-action.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Npm publish
+name: Node.js Package
 
 on:
   release:
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
