--- a/.github/workflows/npm-publish-action.yml
+++ b/.github/workflows/npm-publish-action.yml
@@ -8,14 +8,13 @@ on:
     types: [created]
 
 jobs:
-  publish-npm:
-    needs: build
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20.x'
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
